--- a/apps/web-ui/app/tailwind.css
+++ b/apps/web-ui/app/tailwind.css
@@ -2,57 +2,76 @@
 @tailwind components;
 @tailwind utilities;
 
+.theme-custom {
+  /* Name: custom color palette
+       Author: Ilias Ism
+       URL: https://gradient.page */
+
+  /* CSS: .bg-gradient { background: var(--gradient) } */
+  --gradient: linear-gradient(to top left, #fd8112, #0085ca);
+
+  --background: 30 63.699999999999996% 4.24%;
+  --foreground: 30 9.8% 97.65%;
+
+  --muted: 30 49% 15.9%;
+  --muted-foreground: 30 9.8% 55.3%;
+
+  --popover: 30 45.4% 6.890000000000001%;
+  --popover-foreground: 30 9.8% 97.65%;
+
+  --card: 30 45.4% 6.890000000000001%;
+  --card-foreground: 30 9.8% 97.65%;
+
+  --border: 30 49% 15.9%;
+  --input: 30 49% 15.9%;
+
+  --primary: 30 98% 53%;
+  --primary-foreground: 30 9.8% 5.300000000000001%;
+
+  --secondary: 30 49% 15.9%;
+  --secondary-foreground: 30 9.8% 97.65%;
+
+  --accent: 30 49% 15.9%;
+  --accent-foreground: 30 9.8% 97.65%;
+
+  --destructive: 0 62.8% 30.6%;
+  --destructive-foreground: 30 9.8% 97.65%;
+
+  --ring: 30 98% 53%;
+}
+
 @layer base {
   :root {
-    --background: 33.33 100% 96.47%;
-    --foreground: 0 0% 20%;
-    --muted: 31.43 32.31% 87.25%;
-    --muted-foreground: 0 0% 49.8%;
-    --popover: 31.58 54.29% 93.14%;
-    --popover-foreground: 0 0% 20%;
-    --card: 33.33 100% 96.47%;
-    --card-foreground: 0 0% 20%;
-    --border: 33.75 22.22% 71.76%;
-    --input: 33.75 22.22% 71.76%;
-    --primary: 31.58 54.29% 93.14%;
-    --primary-foreground: 0 0% 20%;
-    --secondary: 33 30% 70%;
-    --secondary-foreground: 0 0% 20%;
-    --accent: 31.43, 9.01%, 91.37%;
-    --accent-foreground: 0 0% 20%;
-    --destructive: 0 78.66% 50.39%;
-    --destructive-foreground: 33 5% 90%;
-    --ring: 33 100% 96.5%;
-    --radius: 0.5rem;
-  }
+    --gradient: linear-gradient(to top left, #fd8112, #0085ca);
 
-  .dark {
-    --background: 20 14.3% 4.1%;
-    --foreground: 60 9.1% 97.8%;
+    --background: 30 63.699999999999996% 4.24%;
+    --foreground: 30 9.8% 97.65%;
 
-    --card: 20 14.3% 4.1%;
-    --card-foreground: 60 9.1% 97.8%;
+    --muted: 30 49% 15.9%;
+    --muted-foreground: 30 9.8% 55.3%;
 
-    --popover: 20 14.3% 4.1%;
-    --popover-foreground: 60 9.1% 97.8%;
+    --popover: 30 45.4% 6.890000000000001%;
+    --popover-foreground: 30 9.8% 97.65%;
 
-    --primary: 60 9.1% 97.8%;
-    --primary-foreground: 24 9.8% 10%;
+    --card: 30 45.4% 6.890000000000001%;
+    --card-foreground: 30 9.8% 97.65%;
 
-    --secondary: 12 6.5% 15.1%;
-    --secondary-foreground: 60 9.1% 97.8%;
+    --border: 30 49% 15.9%;
+    --input: 30 49% 15.9%;
 
-    --muted: 12 6.5% 15.1%;
-    --muted-foreground: 24 5.4% 63.9%;
+    --primary: 30 98% 53%;
+    --primary-foreground: 30 9.8% 5.300000000000001%;
 
-    --accent: 12 6.5% 15.1%;
-    --accent-foreground: 60 9.1% 97.8%;
+    --secondary: 30 49% 15.9%;
+    --secondary-foreground: 30 9.8% 97.65%;
+
+    --accent: 30 49% 15.9%;
+    --accent-foreground: 30 9.8% 97.65%;
 
     --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 60 9.1% 97.8%;
+    --destructive-foreground: 30 9.8% 97.65%;
 
-    --border: 12 6.5% 15.1%;
-    --input: 12 6.5% 15.1%;
-    --ring: 24 5.7% 82.9%;
+    --ring: 30 98% 53%;
+    --radius: 0.5rem;
   }
 }
